--- a/info/templates/info/index.html
+++ b/info/templates/info/index.html
@@ -21,11 +21,11 @@
 		<div class="row">
 			<div class="col-2 text-center"></div>
 			<div class="col-3 text-center mail-but d-flex align-items-center justify-content-center">
-				<p>à propos de l'app</p>
+				<p><a href="{% url 'info:legal_notice'%}">à propos de l'app</a></p>
 			 </div>
 			<div class="col-2 text-center"></div>
 			<div class="col-3 text-center mail-but d-flex align-items-center justify-content-center">
-				<p><a href="https://github.com/blingstand/projet13" target="_blank">code source</a></p>
+				<p><a href="https://github.com/blingstand/projet13" target="_blank">Code Source</a></p>
 			</div>
 			<div class="col-2 text-center"></div>
 		</div>
@@ -33,7 +33,7 @@
 		<div class="row">
 			<div class="col-3 text-center"></div>
 			<div class="col-6 text-center mail-but d-flex align-items-center justify-content-center">
-				<p>le développeur</p>
+				<p>Application développée par <a href="">Adrien Clupot</a></p>
 				</div>
 			<div class="col-3 text-center">space</div>
 
