--- a/mail/templates/mail/index.html
+++ b/mail/templates/mail/index.html
@@ -2,28 +2,31 @@
 {% block content %}
 {% load static %}
 <section>
-	<h2 class="mt-5 pl-5">Page Mail</h2>
-	<article class="mt-5 container">
-		<div class="row ">
-			<div class="col-2"></div>
-			{% for elem in button_value %} <!-- affiche les boutons -->
-            <div class="col-2 bg-primary text-center">
-                <button id="{{elem.id}}" onclick="{{elem.function}}">{{elem.name}}</button>
+    <h2 class="mt-3 mb-3 pl-3">
+        Gestion Mail
+    </h2>
+    <article class="mt-3 container">
+		<div class="row  mt-3 mb-5">
+            <div class="col-5"></div>
+            {% for elem in button_value %} <!-- affiche les boutons -->
+            <div class="col-2  text-center">
+                <button id="{{elem.id}}" class="crud-contact" onclick="{{elem.function}}">{{elem.name|safe}}</button>
             </div>
-            {% endfor%}
-			<div class="col-2"></div>
-		</div>
-		<div class="row">
+            {% endfor %}
+            <div class="col-1"></div>
+
+        </div>
+		<div class="row  scrolable">
 			<!-- nvl ligne -->
-				<form id ="mail_form" action="{% url 'mail:index'%}" method="POST">
+				<form id ="mail_form" class="w-100" action="{% url 'mail:index'%}" method="POST">
 					{% csrf_token %} 
-	                <table class="mail-index" >
+	                <table class="mail-index ml-1" >
 	                    <tr>
-	                        <td>&nbsp;</td>
-	                        <td>nom</td>
-	                        <td>résumé</td>
-	                        <td>envoi auto</td>
-	                        <td>condition</td>
+	                        <td class="col-name"><strong>&nbsp;</td>
+	                        <td class="col-name"><strong>Nom</strong></td>
+	                        <td class="col-name"><strong>Résumé</strong></td>
+	                        <td class="col-name"><strong>Envoi auto</strong></td>
+	                        <td class="col-name"><strong>Condition</strong></td>
 	                    </tr>
 						{%for mail in mails%}
 	                    <tr class="col-12 text-center {% cycle 'row1' 'row2' %}">
