--- a/sheet/templates/sheet/alter.html
+++ b/sheet/templates/sheet/alter.html
@@ -1,97 +1,86 @@
 {% extends 'core/base.html' %}
 {% block content %}
-<section id="alter">
-	<h2 class="mt-5 pl-5">Page Modification Fiche {{animal.name}}</h2>
-	<article class="mt-5 bg-blue">
-		<form id="form_alter" class="sheet" action="" method="post" enctype="multipart/form-data">
+{% load static%}
+<section>
+	<h2 class="mt-3 mb-4 pl-5">Modification Fiche</h2>
+	<article class="">
+		<form class="sheet" action="" method="post" enctype="multipart/form-data">
+			{% if error %}
+				<p class="bg-tomato alinea"><strong>>>>> Problème dans le formulaire : {{error}}</strong></p>
+			{% endif %}
 			{% csrf_token %}
-			<div class="container">
+			<div class="container border-white">
 				<div class="row">
-					<div class="col-8 bg-yellow container">
-						<div class="row">
-							<div class="col-3 text-center">{{form.name.label}} {{form.name}}</div>
-							<div class="col-3 text-center">{{form.date_of_birth.label}}{{form.date_of_birth}}</div>
-							<div class="col-3 text-center">{{form.date_of_adoption.label}}{{form.date_of_adoption}}</div>
-							<div class="col-3 text-center">{{form.date_of_neuter.label}}{{form.date_of_neuter}}</div>
-						</div>
-						<div class="row">
-							<div class="col-8" >
-								<div class="row">
-									<div class="col-5 bg-primary"> {{form.species}}</div>
-									<div class="col-7 bg-primary" id='inputDateZone' > {{form.is_neutered}}</div>
+					<div class="col-5 container">
+						<div class="row part-add">
+							<h4 class="mt-3 mb-4 pl-5">Animal</h4>
+							<div class="col-12 d-flex">
+								<div class="col-6">
+									<p>{{form.name.label}} : {{form.name}}</p>
+								</div>
+								<div class="col-6">
+									<p>{{form.color.label}} : {{form.color}}</p>
 								</div>
 							</div>
-							<div class="col-4 bg-secondary text-center">
-								<p>{{form.race.label}} {{form.race}}</p>
-								<p>{{form.color.label}}  {{form.color}}</p>
-								<p>{{form.observation.label}} {{form.observation}}</p>
-							</div>
-						</div>
-						<div class="row">
-							<div class="col-4 text-center">{{form.file.label}}<br/> {{form.file}}</div>
-							<div class="col-4 text-center">{{form.tatoo.label}}<br/> {{form.tatoo}}</div>
-							<div class="col-4 text-center">{{form.chip.label}}<br/> {{form.chip}}</div>
-						</div>
-						<div class="row">
-							<div class="col-3 text-center">{{form.caution.label}}<br/> {{form.caution}}</div>
-							<div class="col-3 text-center">{{form.nature_caution.label}}<br/> {{form.nature_caution}}</div>
-							<div class="col-3 text-center">{{form.mail_reminder.label}}<br/> {{form.mail_reminder}}</div>
-							<div class="col-3 text-center">{{form.tel_reminder.label}}<br/> {{form.tel_reminder}}</div>
-						</div>
-						<div id="new-former" class=" row d-none new-former">
-							<div class="col-1"></div>
-							<div class="col-4 new-owner  very-center curs-pointer" onclick="dispNewOwn()">
-								Nouveau propriétaire
-							</div>
-							<div class="col-2"></div>
-
-							<div class="col-4 former-owner  very-center curs-pointer" onclick="SelectOwners()">
-								Ancien propriétaire
-							</div>
-							<div class="col-1"></div>
-
-						</div>
-						<div class="row owner_input d-flex">
-							<div class="col-4 text-center">{{form.owner_name.label}}<br/> {{form.owner_name}}</div>
-							<div class="col-4 text-center">{{form.owner_surname.label}}<br/> {{form.owner_surname}}</div>
-							<div class="col-4 text-center very-center">{{form.owner_sex}}</div>
-						</div>
-						<div class="row owner_input d-flex">
-							<div class="col-3 text-center">{{form.phone.label}}<br/> {{form.phone}}</div>
-							<div class="col-4 mb-2 text-center">{{form.mail.label}}<br/> {{form.mail}}</div>
-							<div class="col-5 text-center ">
-								<div class="curs-pointer w-100">
-									<label for="id_select" class="m-0">Sélection propriétaire</label>
-									<select id="id_select" name="former_owner">
-										<option value="0" onclick="SelectOption(this.value)">Nouveau Propriétaire</option>
-										{% for owner in owners%}
-										<option value="{{owner.id}}" onclick="SelectOption(this.value)">{{owner}}</option>
-										{% endfor%}
-									</select>
+							<div class="col-12 d-flex">
+								<div class="col-6">
+									<p>Espèce :<br> {{form.species}}</p>
 								</div>
-							</div>		
-						</div>
-					</div>			
-					<div class="col-4 bg-green">
-						<div class="container">
-							<div class="row">
-								<div class="col-12 text-center">{{form.status}}</div>
-								<div class="col-8"></div>
-								<div class="col-4">
-									<button id='submit' class="btn btn-primary big-btn">Enregistrer</button>
+								<div class="col-6">
+									<p>Race : {{form.race}}</p>
 								</div>
-								<div class="col-12">
-									{% if error %}
-									<p id="verif"> {{error}}</p>
-									{% else%}
-									<p id="verif"></p>
-									{% endif %}
-									
-								</div>
+							</div>
+							<div class="col-12">
+								<hr align=center size=4 width="50%" class="add-hr"/>
+							</div>
+							<div class="col-6">
+								<p class="text-center">Date de naissance : {{form.date_of_birth}}</p>
+							</div>
+							<div class="col-6">
+								<p class="text-center">Date d'adoption : {{form.date_of_adoption}}</p>
+							</div>
+							<div class="col-12">
+								<hr align=center size=4 width="50%" class="add-hr"/>
+							</div>
+							<div class="col-6">
+								<p class="text-center">Caution : {{form.caution}}</p>
+							</div>
+							<div class="col-6">
+								<p class="text-center">Nature : {{form.nature_caution}}</p>
 							</div>
 						</div>
 					</div>
-				</div>			
+					<div class="col-7 container">
+						<div class="row part-add">
+							<h4 class="mt-3 mb-4 pl-5">Admin</h4>
+							<div class="col-12 d-flex">
+								<div class="col-4">Dossier : {{form.file}}</div>
+								<div class="col-4">Puce : {{form.chip}}</div>
+								<div class="col-4">Tatouage : {{form.tatoo}}</div>
+							</div>
+							<div class="col-12">
+								<hr align=center size=4 width="50%" class="add-hr"/>
+							</div>
+							<div class="col-12">
+								<div class="col-12 pl-0">{{form.is_neutered}}</div>
+								<div class="col-12">{{form.status}}</div>
+							</div>
+						</div>
+						<div class="row part-add">
+							<h4 class="mt-3 mb-2 pl-5">Propriétaire</h4>
+							<div class="col-12 d-flex pt-2 pb-4">
+								<div class="col-9 d-flex very-center curs-pointer  ">
+									{{form.select_owner}} <p class=" pt-3 ml-5"><img class="icon-link" src="{% static 'img/eye.png'%}" onclick="GotoOwner()" alt="eye"></p>
+								</div>
+
+								<div class="col-3 d-flex very-center curs-pointer" >
+									<input id="save" type="submit" class="btn btn-primary big-btn" value="Enregistrer"> 
+								</div>
+							</div>
+							<p id="hint"></p>
+						</div>
+					</div>
+				</div>
 			</div>
 		</form>
 	</article>
@@ -100,164 +89,117 @@
 <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
 <script type="text/javascript" src='{% static "sheet/js/utils.js" %}'> </script>
 <script type="text/javascript">
+	/* *** plan ***
+	1/ User select new or former owner
+	2/ 	A. new displays Ownerform
+	2/ 	B. former displays select with owner in option
+	3/ Client sends Ajax request to get more infos about selected owner id
+	4/ Client receives info, success > display ownerform and fill it
+	*/
 
-	let true_radio = document.getElementById("id_is_neutered_0");
-	true_radio.checked = true;
-	let species0 = document.getElementById("id_species_0");
-	species0.checked = true;	
-	let divOwners = document.getElementsByClassName('owner_input')
-    let divNewFormer = document.getElementById('new-former')	
-	let new_owner = false
-	let reaction
-	const Select = function(){
-		for (div of divOwners){
-			div.classList.replace('d-flex', 'd-none')
+	let is_neutered_button = document.getElementById("id_is_neutered_0")
+	is_neutered_button.checked = true
+	// let owner_sex_button = document.getElementById("id_owner_sex_0")
+	// owner_sex_button.checked = true
+	let divNF = document.getElementsByClassName("new-former")[0]
+	let ownDivs = document.getElementsByClassName('owner_input') //div for input owner
+	let divFormer = document.getElementsByClassName("former-owner")[0] //div for button Ancien Propériétaire
+	let divNew = document.getElementsByClassName("new-owner")[0] //div for button Nouveau Propériétaire
+
+	const GotoOwner = function(){
+		//this function gathers the value of select and open a new window according to this id_value"""
+		select_val = document.getElementById('id_select_owner').value
+		const width  = document.body.clientWidth;
+		const height = document.body.clientHeight;
+		let wanted_width = (width * 35)/100
+		let wanted_height = (height * 70)/100
+
+		if (select_val == "0"){
+			url_open = "{% url 'sheet:add_owner_open'%}"
 		}
-		divNewFormer.classList.replace('d-none', 'd-flex')
+		{% for owner in owners %}
+		if (select_val == {{owner.id}}){
+			wanted_width = (width * 65)/100
+			wanted_height = (height * 80)/100
+			url_open = "{% url 'sheet:alter_owner_open' owner.id%}"
+
+		}
+		{% endfor %}
+		document.getElementById('hint').innerHTML="Appuyer sur F5 après toutes sortes de changements"
+		console.log(wanted_width, wanted_height)
+		let spec =  "toolbar=yes,scrollbars=yes,resizable=yes,top=50,left=200,width="
+		spec += wanted_width+",height="+wanted_height
+		window.open(url_open, "_blank", spec);
 	}
 
-	const SelectOption = function(value){
-		if (value != "0"){
-			new_owner = false
+	//*** auto fill with today date 
+	const today = function(elem) {
+		let today = new Date();
+		let month = today.getMonth()+1
+		if (month <= 9) {
+			month = '0' + String(month)}
+			let date = today.getDate()+'/'+month+'/'+today.getFullYear();
+			let input = elem.nextElementSibling.nextElementSibling
+			input.value = date
+		}
+
+	//create an input date for the future date of neuter
+	const appearNewInput = function(bo){
+		willBe = document.getElementById('id_is_neutered_2')
+		if (bo){
+			willBe.checked = true
+			willBe.parentNode.innerHTML = '<input id="id_is_neutered_2" class="lst-none pl-0 mb-0" type="radio" name="is_neutered" value="2" checked> sera stérilisable le {{form.futur_date_of_neuter}}.</input>'
+		}else{
+			willBe.parentNode.innerHTML = '<input id="id_is_neutered_2" class="lst-none pl-0 mb-0" type="radio" name="is_neutered" value="2" > sera stérilisable </input>'
+		}
+		// let divDate = document.createElement("div");
+		// divDate.innerHTML = '{{form.futur_date_of_neuter.label}} &nbsp {{form.futur_date_of_neuter}}'
+		// divDate.classList.add("d-none")
+		// divDate.id = "divDate"
+		// document.getElementById('inputDateZone').appendChild(divDate);
+
+	}
+	const CreateSelectOwners = function(){
+		owners = []
+		{% for owner in owners%}
+		owners.push({
+			'name' : '{{owner}}', 'id' : '{{owner.id}}'
+		})
+		{% endfor%}
+		const whatToDo = function(data){
 			dispNewOwn()
-			{% for owner in owners%}
-			if ({{owner.id}} == value){
-				data = {
-	                "name":'{{owner.owner_name}}',
-	                "surname":'{{owner.owner_surname}}',
-	                "sex":'{{owner.owner_sex}}',
-	                "phone":'{{owner.phone}}',
-	                "mail":'{{owner.mail}}',
-	                }
-	            console.log("pour compléter : ")
-	            console.log(data)
+			fillBlank(data)
+		}
+		SelectOwners(owners, '{% url "sheet:add"%}', whatToDo)
+	}
+	const GiveStartValue = function(){
+		document.getElementById("id_caution").value = 100
+	}
+	const getInputDate = function(){
+		const allInput = document.getElementsByTagName('input')
+		let allInputDate = []
+		for (input of allInput){
+			if (input.id.substring(0,7) == "id_date"){
+				allInputDate.push(input)
+			}else if (input.id == "id_date_of_neuter" && input.value == ''){
+				console.log('pas de date de stérilisation')
 			}
-			{% endfor%}
-			fillBlank(data)				
-		}else{
-			new_owner = true
-			removeFromOwnerBlank()
 		}
+		console.log(allInputDate)
+		return allInputDate
 	}
-	const SendDatas = function(url, datas, reaction){
-		//AJAX
-		const csrfSafeMethod = function(method) {
-        	// these HTTP methods do not require CSRF protection
-        	return (/^(GET|HEAD|OPTIONS|TRACE)$/.test(method));
-    	}
-		$.ajaxSetup({
-            beforeSend: function (xhr, settings) {
-                // if not safe, set csrftoken
-                if (!csrfSafeMethod(settings.type) && !this.crossDomain) {
-                    xhr.setRequestHeader("X-CSRFToken", csrftoken);
-                }
-            }
-        }); 
-        $.ajax({ 
-            type:"POST", 
-            url: "{% url 'sheet:add'%}", 
-            dataType: 'json',
-            data: datas,
-            success: function(res){
-            	reaction(res.data)
-            	},
-            error: function (res) {
-                alert("erreur lors de l'envoie de données");
-                console.log(res.status);
-                console.log(res.error);
-            }
-        })			
-	}
-	const appearNewInput = function(){
-		//create an input date
-		let divDate = document.createElement("div");
-		divDate.innerHTML = '{{form.futur_date_of_neuter}}'
-		document.getElementById('inputDateZone').appendChild(divDate);
-		document.getElementById('id_futur_date_of_neuter').classList.add('d-none')
-		console.log('appeared')
-	}
-
-	const GetTheBlank = function(){
-		//takes all inputs
-		const inputsNodes = document.querySelectorAll("section#alter input"); 
-		const inputs = Array.from(inputsNodes);	
-		let inputsToFill = new Array()
-		let choicesToMake = new Array()
-
-		for (input of inputs){
-			let count = 0 
-			//split inputs between 2 cat : text and choice
-			for (elem of ['id_species_0','id_species_1','id_species_2','id_species_3', 'id_is_neutered_0', 'id_is_neutered_1', 'id_is_neutered_2', 'id_nature_caution', 'id_owner_sex_0', 'id_owner_sex_1']){
-				if (input.id == elem){
-					choicesToMake.push(input);
-					count ++}}
-			if (count == 0){inputsToFill.push(input);}
-		}
-		inputsToFill.splice(0, 1);//kick first one, not concerned
-
-		console.log(inputsToFill[16])
-		return [inputsToFill, choicesToMake]; //return array
-	}
-
-	//fills the inputs
-	const FillTheInputs = function(fields){
-		// this functions fills the inputs with the given data from animal
-		values = ['{{animal.name}}','{{animal.date_of_birth|date:"Y-m-d"}}','{{animal.date_of_adoption|date:"Y-m-d"}}','{{animal.admin_data.date_of_neuter|date:"Y-m-d"}}', '{{animal.admin_data.futur_date_of_neuter|date:"Y-m-d"}}', '{{animal.race}}', '{{animal.color}}', '{{animal.observation|escapejs}}', "{{animal.admin_data.file}}", "{{animal.admin_data.tatoo}}", "{{animal.admin_data.chip}}", "{{animal.caution}}", "{{animal.owner.mail_reminder}}","{{animal.owner.tel_reminder}}", "{{animal.owner.owner_name}}", "{{animal.owner.owner_surname}}", "{{animal.owner.phone}}", "{{animal.owner.mail}}" ]
-		for (i in values){
-
-			fields[i].value = values[i];
-		}
-		document.getElementById('id_status').innerHTML = "{{animal.admin_data.status}}"
-	}
-	//make choices
-	const CheckCHoices = function(options){
-		// this function checks the concerned checkbox according to the given datas for db
-		console.log("doit être checké : "+ 'id_is_neutered_' + '{{animal.admin_data.is_neutered}}')
-		document.getElementById('id_species_' + '{{animal.species}}').checked = true
-		document.getElementById('id_is_neutered_' + '{{animal.admin_data.is_neutered}}').checked = true
-		document.getElementById('id_owner_sex_' + '{{animal.owner.owner_sex}}').checked = true
-		document.getElementById('id_nature_caution').value = '{{animal.nature_caution}}'
-		if (document.getElementById('id_is_neutered_2').checked){
-			document.getElementById('id_futur_date_of_neuter').classList.replace('d-none', 'd-flex')
-		}
-	}
-	//send a resquest to server to modify db with new datas
-	const AlterDb = function(){
-		if (document.getElementById('id_select').value != 0){
-			new_owner = false
-		}else{
-			new_owner = true}
-	}
-
+	//*** event 
 	document.getElementById("id_is_neutered").addEventListener('click', function(e){
-		if(document.getElementById("id_is_neutered_2").checked){
-			document.getElementById("id_futur_date_of_neuter").classList.replace('d-none', 'd-flex')
+		if(document.getElementById('id_is_neutered_2').checked){
+			appearNewInput(true)
 		}else{
-			document.getElementById("id_futur_date_of_neuter").classList.replace('d-flex', 'd-none')
+			appearNewInput(false)
 		}
 	})
-	const getInputDate = function(){
-		let allInputDate = []
-		keys = [ 'id_date_of_birth', 'id_date_of_adoption', 'id_date_of_neuter', 'id_futur_date_of_neuter']
-		for (key of keys){				
-			allInputDate.push(document.getElementById(key))
-		}
-		if (allInputDate.length == 4){
-			return allInputDate
-		}else{
-			alert('problem dans getInputDate()')}
+	const main = function(){
+		GiveStartValue()
 	}
-
-	document.getElementById('id_select').value = {{animal.owner.id}}
-	appearNewInput();
-	if (document.getElementById('id_is_neutered_2').checked){
-
-	}
-	let my_form  = GetTheBlank() //gives the void inputs in order to fill them  
-	console.log(my_form)
-	FillTheInputs(my_form[0])
-	CheckCHoices(my_form[1])
-
+	main()
 </script>
 {% endblock  %}
 
