--- a/sheet/templates/sheet/alter_owner_open.html
+++ b/sheet/templates/sheet/alter_owner_open.html
@@ -1,5 +1,20 @@
-{% extends 'core/base.html' %}
-{% block content %}
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
+
+  <title>SPA suivi stérilisation</title>
+  {% load static %}
+	<link href="{% static 'css/bootstrap.min.css'%}" rel="stylesheet" type="text/css" >
+	<link rel="stylesheet" href="{% static 'css/change.css'%}">
+	<link rel="icon" href="{% static 'img/favicon.png'%}">
+</head>
+<body>
+	
 <section>
 	<p class="curs-pointer back-button" onclick=BackToIndex()>Retour Index</p>
 	<h2 class="mt-3 mb-3 pl-3">Page Nouveau Propriétaire</h2>
@@ -8,8 +23,7 @@
 			{% csrf_token %}
 			<div class="container">
 				<div class="row">
-					<div class="col-1"></div>
-					<div class="col-7 bg-blue-trans container">
+					<div class="col-8 bg-blue-trans container">
 						<div class="row owner_input d-flex mt-3 mb-3">
 							{% for field in form %}
 							<div class="col-2"></div>
@@ -90,7 +104,7 @@
 			{% endif %}
 			if (can_delete){
 				form = document.getElementById('form')
-				form.action = "{% url 'sheet:alter_owner' selected_owner.id 'delete'%}"
+				form.action = "{% url 'sheet:alter_owner_open' selected_owner.id 'delete'%}"
 				console.log(form.action)
 				form.submit()
 			} 
@@ -100,7 +114,7 @@
 	}
 	const Modify = function(){
 		form = document.getElementById('form')
-		form.action = url + '/modify'
+		form.action = "{% url 'sheet:alter_owner_open' selected_owner.id 'modify'%}"
 		form.submit()
 	}
 
@@ -111,5 +125,4 @@
 
 
 </script>
-{% endblock  %}
-
+</body>
