--- a/sheet/templates/sheet/historic.html
+++ b/sheet/templates/sheet/historic.html
@@ -1,27 +1,27 @@
 {% extends 'core/base.html' %}
 {% block content %}
 <section>
-    <p id='back_to_owner' onclick=ReturnOwnerIndex()>Retour Index</p>
-    <h2 class="mt-5 pl-5">Historique des contacts de {{owner.owner_name}} {{owner.owner_surname}}</h2>
-    <article class="mt-5 container">
-        <div class="row bg-green">
-            <div class="col-2"></div>
+    <p class="curs-pointer back-button" onclick=BackToIndex()>Retour Index</p>
+    <h2 class="mt-3 mb-3 pl-3">
+        Historique des contacts pour {{owner.owner_name}} {{owner.owner_surname}}
+    </h2>
+    <article class="mt-3 container">
+        <div class="row  mt-5 mb-5">
+            <div class="col-5"></div>
             {% for elem in button_value %} <!-- affiche les boutons -->
-            <div class="col-3 bg-primary text-center">
-                <button id="{{elem.id}}" onclick="{{elem.function}}">{{elem.name}}</button>
+            <div class="col-2  text-center">
+                <button id="{{elem.id}}" class="crud-contact" onclick="{{elem.function}}">{{elem.name|safe}}</button>
             </div>
             {% endfor %}
             <div class="col-1"></div>
-            <div class="col-12 mb-2 text-center">
-                <button>imprimer</button>
-            </div>
+
         </div>
         <div class="row scrolable">
             <table id="histo_table" class="">
                 <tr class="col-12 text-center">
-                    <td>&nbsp;</td>
+                    <td  class="col-name">&nbsp;</td>
                     {% for col in historic_cols %}
-                    <td>{{col}}</td>
+                    <td  class="col-name"><strong>{{col}}</strong></td>
                     {% endfor %}
                 </tr>
                 {% for contact in contacts|dictsort:"contact_date"%}
@@ -48,9 +48,11 @@
     */
     let table = document.getElementById('histo_table')
     const form = document.getElementById('my_form')
-    document.getElementById('back_to_owner').classList.add('curs-pointer')
 
-    
+    const BackToIndex = function(){
+        window.location.href = "{% url 'sheet:index' own=1%}"
+        // window.location.href = window.location.href; 
+    }
     const GetCounter = function(){
         allTd = document.querySelectorAll('tr')
         return allTd.length
@@ -260,11 +262,6 @@
                 });
             }
         }
-    }
-    const ReturnOwnerIndex = function(){
-        //this functions opens index page with owners
-        window.location.href = "{% url 'sheet:index' 1 %}"
-
     }
     const main = function(){
         activClickEvent()
