--- a/sheet/templates/sheet/alter.html
+++ b/sheet/templates/sheet/alter.html
@@ -72,7 +72,6 @@
 								<div class="col-9 d-flex very-center curs-pointer  ">
 									{{form.select_owner}} <p class=" pt-3 ml-5"><img class="icon-link" src="{% static 'img/eye.png'%}" onclick="GotoOwner()" alt="eye"></p>
 								</div>
-
 								<div class="col-3 d-flex very-center curs-pointer" >
 									<input id="save" type="submit" class="btn btn-primary big-btn" value="Enregistrer"> 
 								</div>
@@ -97,14 +96,16 @@
 	4/ Client receives info, success > display ownerform and fill it
 	*/
 
-	let is_neutered_button = document.getElementById("id_is_neutered_0")
-	is_neutered_button.checked = true
 	// let owner_sex_button = document.getElementById("id_owner_sex_0")
 	// owner_sex_button.checked = true
 	let divNF = document.getElementsByClassName("new-former")[0]
 	let ownDivs = document.getElementsByClassName('owner_input') //div for input owner
 	let divFormer = document.getElementsByClassName("former-owner")[0] //div for button Ancien Propériétaire
 	let divNew = document.getElementsByClassName("new-owner")[0] //div for button Nouveau Propériétaire
+
+	/***/
+	let don = false
+	let fdon = false
 
 	const GotoOwner = function(){
 		//this function gathers the value of select and open a new window according to this id_value"""
@@ -130,26 +131,30 @@
 		let spec =  "toolbar=yes,scrollbars=yes,resizable=yes,top=50,left=200,width="
 		spec += wanted_width+",height="+wanted_height
 		window.open(url_open, "_blank", spec);
+		alert("On continue ?")
+		window.location.href = window.location.href
 	}
 
-	//*** auto fill with today date 
-	const today = function(elem) {
-		let today = new Date();
-		let month = today.getMonth()+1
-		if (month <= 9) {
-			month = '0' + String(month)}
-			let date = today.getDate()+'/'+month+'/'+today.getFullYear();
-			let input = elem.nextElementSibling.nextElementSibling
-			input.value = date
-		}
 
-	//create an input date for the future date of neuter
-	const appearNewInput = function(bo){
+	//create an input date for the dates of neuter
+	const appearNewDateInput = function(nb){
+		is_neuter = document.getElementById('id_is_neutered_0')
 		willBe = document.getElementById('id_is_neutered_2')
-		if (bo){
+		if (nb == "0"){
+			is_neuter.checked = true
+			is_neuter.parentNode.innerHTML = '<input id="id_is_neutered_0" class="lst-none pl-0 mb-0" type="radio" name="is_neutered" value="2" checked> stérilisé le {{form.date_of_neuter}}.</input>'
+			willBe.parentNode.innerHTML = '<input id="id_is_neutered_2" class="lst-none pl-0 mb-0" type="radio" name="is_neutered" value="2" > sera stérilisable </input>'
+			return true
+		}
+		else if (nb == "2"){
 			willBe.checked = true
 			willBe.parentNode.innerHTML = '<input id="id_is_neutered_2" class="lst-none pl-0 mb-0" type="radio" name="is_neutered" value="2" checked> sera stérilisable le {{form.futur_date_of_neuter}}.</input>'
+			is_neuter.parentNode.innerHTML = '<input id="id_is_neutered_0" class="lst-none pl-0 mb-0" type="radio" name="is_neutered" value="0">stéril</input>'
+			return true
 		}else{
+			is_neuter.checked = false
+			willBe.checked = false
+			is_neuter.parentNode.innerHTML = '<input id="id_is_neutered_0" class="lst-none pl-0 mb-0" type="radio" name="is_neutered" value="0">stéril</input>'
 			willBe.parentNode.innerHTML = '<input id="id_is_neutered_2" class="lst-none pl-0 mb-0" type="radio" name="is_neutered" value="2" > sera stérilisable </input>'
 		}
 		// let divDate = document.createElement("div");
@@ -172,9 +177,6 @@
 		}
 		SelectOwners(owners, '{% url "sheet:add"%}', whatToDo)
 	}
-	const GiveStartValue = function(){
-		document.getElementById("id_caution").value = 100
-	}
 	const getInputDate = function(){
 		const allInput = document.getElementsByTagName('input')
 		let allInputDate = []
@@ -189,13 +191,25 @@
 		return allInputDate
 	}
 	//*** event 
-	document.getElementById("id_is_neutered").addEventListener('click', function(e){
-		if(document.getElementById('id_is_neutered_2').checked){
-			appearNewInput(true)
+	document.getElementById('id_is_neutered_0').parentNode.onclick = function(e){
+		if (e.target.name == "date_of_neuter"){
+			return
 		}else{
-			appearNewInput(false)
+			appearNewDateInput("0")
 		}
-	})
+	}
+	document.getElementById('id_is_neutered_1').parentNode.onclick = function(){
+
+		appearNewDateInput("1")
+	}
+	document.getElementById('id_is_neutered_2').parentNode.onclick = function(e){
+		if (e.target.name == "futur_date_of_neuter"){
+			return
+		}else{
+			appearNewDateInput("2")
+		}
+	}
+	
 	const main = function(){
 		GiveStartValue()
 	}
